src/index.css
:root {
  font: 16px / 1 sans-serif;
}

html {
  height: 100%;
}

body {
  margin: 0;
  min-height: 100%;
  background-color: #8a8989;
}

.profile-pic {
  width: 300px;
  height: 400px;
  border-radius: 20px;
}

.cast-names {
  text-align: center;
  font-family: "Milonga", cursive;
  position: relative;
  bottom: 36px;
  font-size: 1.6em;
  max-width: 300px;
  padding: 5px;
  background-color: #ddffdd;
  color: black;
  border-radius: 4px;
}

.page-title a {
  color: white;
}

.page-title {
  margin: 0;
  text-align: center;
  font-family: "Milonga", cursive;
  font-size: 3em;
  color: silver;
  padding: 1em;
  background-color: #3a4454;
}

.random-show-container {
  display: flex;
  justify-content: center;
  background-color: #7b939d !important;
}

/* tv show chosen on cast page */
.show-picked-container {
  display: flex;
  justify-content: center;
  flex-direction: row;
  flex-wrap: wrap;
  padding: 1em;
  font-weight:bold;
}

.show-picked {
  display: flex;
  flex-direction: column;
  width: 20em;
  padding: 0.5em;
  border-radius: 1em;
  background-color: rgb(97%, 97%, 98%);
}

.background-show-picked {
  display: flex;
  width: 100%;
  background-color: #8da1b9;
}

.top-show-header {
  color: rgb(227, 218, 218);
  text-align: center;
  font-size: 1.9em;
  font-family: serif;
  padding: 0.1em;
}

.show-container {
  flex-direction: column;
  color: black;
  padding: 1em;
  border-radius: 1em;
  background-color: rgb(97%, 97%, 98%);
}

.show-multi {
  display: flex;
  width: 20em;
}

.all-shows {
  display: flex;
  justify-content: space-evenly;
  flex-direction: row;
  flex-wrap: wrap;
}

.blue-background {
  padding-top: 1.5em;
  background-color: #7b939d !important;
}

footer {
  display:flex;
  justify-content: center;
  background-color: #3a4454;
  font-size: 1.5em;
  padding: 1em;
  color: silver;
}

.copyright {
 padding-bottom:2em;
}

a:visited {
  text-decoration: none;
}

img {
  padding-bottom:1em;
}

